--- a/staff/groups/esputy-corp/esputyfu/components/header/index.sass
+++ b/staff/groups/esputy-corp/esputyfu/components/header/index.sass
@@ -1,7 +1,6 @@
-h2
-    color: white
 .header
     background-color: black
+    border-bottom: 2px solid white
     padding: 20px
     font-family: "Playfair Display", serif
     display: flex
@@ -16,6 +15,11 @@ h2
     &__logo
         
         display: inline-block
+    &__h2
+        text-decoration: none
+        color: white
+        font-size: 33px
+        font-weight: bold
 
 
 .header__a:hover
