--- a/staff/groups/esputy-corp/esputyfu/components/login/index.sass
+++ b/staff/groups/esputy-corp/esputyfu/components/login/index.sass
@@ -1,6 +1,7 @@
 .login
-    background-image: url('https://cdn.pixabay.com/photo/2015/05/15/14/50/concert-768722_960_720.jpg')
+    background-image: url('https://cdn.pixabay.com/photo/2016/11/23/00/58/record-player-1851576_960_720.jpg')
     background-position: center
     background-size: cover
     min-height: 70vh
     text-align: center
+    color: white
