--- a/staff/groups/esputy-corp/esputyfu/styles/base-settings.sass
+++ b/staff/groups/esputy-corp/esputyfu/styles/base-settings.sass
@@ -4,12 +4,10 @@
 body
     margin: 0
     padding: 0
-    background-image: linear-gradient(black, #2a5234, black)
+    background-color: black
 .container
-    color: black
-    border: 5px solid #6f6f6f
+    color: white
     padding: 20px
-    background-color: rgba(255, 255, 255, 0.6)
     text-align: center
     display: block
     font-family: 'Playfair Display', serif
