--- a/staff/groups/esputy-corp/esputyfu/styles/index.css
+++ b/staff/groups/esputy-corp/esputyfu/styles/index.css
@@ -5,14 +5,12 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: linear-gradient(black, #2a5234, black);
+  background-color: black;
 }
 
 .container {
-  color: black;
-  border: 5px solid #6f6f6f;
+  color: white;
   padding: 20px;
-  background-color: rgba(255, 255, 255, 0.6);
   text-align: center;
   display: block;
   font-family: "Playfair Display", serif;
@@ -50,43 +48,9 @@ h1 {
   font-size: 35px;
 }
 
-.container {
-  color: black;
-  border: 5px solid #6f6f6f;
-  padding: 20px;
-  background-color: rgba(255, 255, 255, 0.6);
-  text-align: center;
-  display: block;
-  font-family: "Playfair Display", serif;
-}
-.container__campName {
-  display: none;
-}
-.container__input {
-  border-radius: 10px;
-  border: 2px solid #6F6F6F;
-  background-color: white;
-  margin-top: 1rem;
-  width: 75%;
-  padding: 8px;
-}
-.container__advice {
-  display: none;
-}
-.container__button {
-  border: 2px solid #6F6F6F;
-  background-color: white;
-  border-radius: 10px;
-  width: 50%;
-  margin-top: 50px;
-}
-
-h2 {
-  color: white;
-}
-
 .header {
   background-color: black;
+  border-bottom: 2px solid white;
   padding: 20px;
   font-family: "Playfair Display", serif;
   display: flex;
@@ -102,6 +66,12 @@ h2 {
 .header__logo {
   display: inline-block;
 }
+.header__h2 {
+  text-decoration: none;
+  color: white;
+  font-size: 33px;
+  font-weight: bold;
+}
 
 .header__a:hover {
   color: skyblue;
@@ -113,7 +83,6 @@ h2 {
   bottom: 0px;
   color: white;
   text-align: center;
-  border-top: 2px solid black;
 }
 .footer__title {
   font-family: "Playfair Display", serif;
@@ -125,11 +94,16 @@ h2 {
 }
 
 .login {
-  background-image: url("https://cdn.pixabay.com/photo/2015/05/15/14/50/concert-768722_960_720.jpg");
+  background-image: url("https://cdn.pixabay.com/photo/2016/11/23/00/58/record-player-1851576_960_720.jpg");
   background-position: center;
   background-size: cover;
   min-height: 70vh;
   text-align: center;
+  color: white;
+}
+
+.container__background {
+  background-image: url("https://cdn.pixabay.com/photo/2016/11/23/00/58/record-player-1851576_960_720.jpg");
 }
 
 .container__img {
