--- a/staff/groups/over-cook-sa/overcooked/style/index.sass
+++ b/staff/groups/over-cook-sa/overcooked/style/index.sass
@@ -109,11 +109,18 @@ main
 footer
     background-color: rgb(163, 15, 50)
     display: flex
+    align-content: flex-end
+    flex-wrap: wrap
     justify-content: space-evenly
     align-items: baseline
     color: white
     width: 100vw
+    font-size: 0.8rem
 
+.footer-sMedia
+    display: inline-flex
+    flex-wrap: wrap
+    flex: end
 
 .feedback
     border: 2px solid rgba(0,0,0,0.3)
@@ -132,3 +139,96 @@ footer
         background-color: yellow
     &--success
         color: green
+
+
+.loginTitle
+    font-family: verdana
+    color: #4091cc
+    text-align: center
+    margin-top: 1rem
+
+.loginForm
+    display: flex
+    flex-wrap: wrap
+    justify-content: center
+    color: #4091cc
+    flex-direction: column
+    padding: 1rem
+
+.btnGo
+    margin-top: 1rem
+    align-self: center
+    border: none
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+    font-weight: bold
+    background-color: #4091cc
+    height: 1.7rem
+    color: white
+    width: 4rem
+
+.backButton
+    text-align: center
+    padding-top: 0.4rem
+    align-content: space-around
+    text-decoration: none
+    font-size: 0.7rem
+    margin-top: 1rem
+    align-self: center
+    border: none
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+    font-weight: bold
+    background-color: #4091cc
+    height: 1.3rem
+    color: white !important
+    width: 4rem
+
+.homeHeader
+    text-align: center
+
+.headerButton
+    text-align: center
+    padding: 0.4rem
+    align-content: space-around
+    text-decoration: none
+    font-size: 0.7rem
+    margin-top: 1rem
+    margin-left: 0.2rem
+    align-self: center
+    border: none
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+    font-weight: bold
+    background-color: #4091cc
+    color: white
+    width: 1rem
+
+.home-welcome
+    margin-bottom: 0.5rem
+
+.search
+    margin-top: 1.5rem
+    margin-bottom: 0.5rem
+
+.catTitle
+    text-align: center
+    color: #4091cc
+    margin: 1rem
+
+
+.wrapper
+    color: #4091cc
+    font-family: verdana
+    display: flex
+    flex-direction: column
+    text-align: center
+    margin-top: 1rem
+    
+.img
+    width: 100vw
+    height: auto
+
+.descText
+    color: black
+    text-align: justify
+    padding: 1rem
+    
+     
