add all epic style

--- a/staff/groups/esputy-corp/esputyfu/components/search/index.sass
+++ b/staff/groups/esputy-corp/esputyfu/components/search/index.sass
@@ -1,2 +1,7 @@
 .container__background 
-    background-image: url('https://cdn.pixabay.com/photo/2016/11/23/00/58/record-player-1851576_960_720.jpg')
+    background-image: url('https://cdn.pixabay.com/photo/2015/03/26/09/58/headphones-690685_960_720.jpg')
+    padding: 50px
+    background-position: center
+    min-height: 500px 
+.container__title
+    font-size: 40px
