--- a/staff/groups/esputy-corp/esputyfu/styles/index.css
+++ b/staff/groups/esputy-corp/esputyfu/styles/index.css
@@ -102,8 +102,27 @@ h1 {
   color: white;
 }
 
+.results__li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .container__background {
-  background-image: url("https://cdn.pixabay.com/photo/2016/11/23/00/58/record-player-1851576_960_720.jpg");
+  background-image: url("https://cdn.pixabay.com/photo/2015/03/26/09/58/headphones-690685_960_720.jpg");
+  padding: 50px;
+  background-position: center;
+  min-height: 500px;
+}
+
+.container__title {
+  font-size: 40px;
+}
+
+.container__item {
+  width: 100%;
+  max-width: 300px;
+  text-align: center;
 }
 
 .container__img {
