--- a/staff/groups/abesti-enterprise/bertsolab/style/index.sass
+++ b/staff/groups/abesti-enterprise/bertsolab/style/index.sass
@@ -34,6 +34,27 @@ a
   color: #000
 
 
+.display-song
+
+    height: 100vh
+    background-color: rgba(10, 10, 10, 0.9)
+    z-index: 1
+    position: fixed
+    left: 0
+    top: 0
+    display: flex
+    justify-content: center
+    align-items: center
+    color: purple
+    padding: 30px 30px 30px 30px
+
+    &_cross
+      background-color: rgba(10, 10, 10, 0.9)
+      color: white
+
+
+
+
 /* header */
 
 .header 
