--- a/staff/groups/abesti-enterprise/bertsolab/style/index.css
+++ b/staff/groups/abesti-enterprise/bertsolab/style/index.css
@@ -6,14 +6,22 @@
   box-sizing: border-box;
 }
 
-.header {
-  background-image: linear-gradient(to bottom right, black, purple);
-  background-repeat: no-repeat;
+*:focus {
+  outline: none;
 }
 
 body {
   width: 100vw;
   background-color: #0a0a0a;
+}
+
+.header {
+  background-image: linear-gradient(to bottom right, #0a0a0a, purple);
+  background-repeat: no-repeat;
+}
+
+.header__logo--image {
+  width: 60%;
 }
 
 .form {
@@ -24,18 +32,91 @@ body {
   border-radius: 0.1rem;
 }
 .form__title {
-  padding: 1rem;
-  font-size: 0.8;
+  padding: 1rem 1rem 0;
+  font-size: 150%;
 }
 .form__field {
+  padding: 0.5rem;
+  margin: 0.5rem 1rem;
   font-size: 1.5rem;
+  border: 0.1rem solid #9c50b6;
+  border-radius: 0.3rem;
+}
+.form__field:hover {
+  outline: 2px solid #ecb182;
+}
+.form__field:focus {
+  outline: 5px solid #ecb182;
 }
 .form__button {
-  margin: 1rem;
+  padding: 0.5rem;
+  margin: 0.5rem 3rem;
+  font-size: 1.5rem;
+  border: 0.1rem solid #9c50b6;
+  border-radius: 0.3rem;
+  background-color: #f4f4f4;
+}
+.form__button:hover {
+  outline: 5px solid #ecb182;
+  background-color: purple;
+  color: white;
 }
 
-.header__logo--image {
-  width: 60%;
+.register, .login {
+  margin-bottom: 10%;
+}
+
+.register__title, .login__title {
+  background-color: plum;
+  padding: 1rem;
+  font-size: 120%;
+  border: 0.1rem solid purple;
+  border-bottom: none;
+}
+
+.register__form, .login__form {
+  border-top: none;
+}
+.register__form label, .login__form label {
+  padding-left: 1rem;
+}
+.register__form--field, .login__form--field {
+  width: 90%;
+  font-size: 1rem;
+}
+
+.form__info {
+  color: white;
+  padding: 1em;
+}
+
+.anchor__link {
+  color: white;
+}
+
+.feedback {
+  text-align: center;
+  padding: 1rem;
+  color: tomato;
+  font-size: x-large;
+}
+
+.song-item {
+  color: #f4f4f4;
+}
+
+.fav-button {
+  background-color: transparent;
+  color: #ecb182;
+  font-size: x-large;
+  border: none;
+}
+
+.lyrics-item__button {
+  background-color: transparent;
+  color: #f4f4f4;
+  font-size: x-large;
+  border: none;
 }
 
 .footer {
@@ -72,7 +153,7 @@ body {
 .user-menu__auth-option-link {
   display: block;
   padding: 20px 20px;
-  border-right: 1px solid purple;
+  border-right: 0.1rem solid purple;
   text-decoration: none;
   color: #f4f4f4;
 }
@@ -169,12 +250,29 @@ body {
     width: 100%;
   }
 
+  .register__title, .login__title {
+    background-color: #0a0a0a;
+    color: white;
+    font-size: 150%;
+    border: none;
+  }
+
+  .form {
+    padding: 1em, 0;
+    border: 0.1rem solid #9c50b6;
+    border-radius: 0.3rem;
+  }
+  .form__field {
+    width: 95%;
+  }
+
   .user-menu__auth-option {
     float: left;
   }
 
   .user-menu__auth-option-link {
     padding: 20px 30px;
+    border: 0.1rem solid purple;
   }
 
   .header .user-menu {
