--- a/staff/groups/le-sky-martini-inc/memefy/components/register-success.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/register-success.sass
@@ -1,8 +1,19 @@
 .register-success
     @extend %main-content-box 
+    font-family: "Cousine", sans-serif
+    border-radius: 0.5em 
+    width: 90%
+
+    &__copy
+        color: white
 
     &__login
         @extend %link
+        background-color: white
+        padding: 10px
+        border-radius: 0.2em 
+        z-index: 1em
     
     &__login:hover
-        color: $hover-text-color
+        color: white
+        background-color: deeppink
