--- a/staff/groups/le-sky-martini-inc/memefy/style/index.css
+++ b/staff/groups/le-sky-martini-inc/memefy/style/index.css
@@ -5,10 +5,8 @@
 }
 
 .feedback, .register-or-login, .register-success, .register, .login, .landing {
-  background-color: rgba(0, 0, 0, 0.5);
-  margin: 5em auto auto auto;
+  margin: 2em auto auto auto;
   padding: 30px;
-  width: 90%;
   height: 95%;
   text-align: center;
 }
@@ -19,21 +17,21 @@
 }
 
 .search__input, .register__input, .login__input {
-  width: 95%;
-  margin-top: 0.5em;
-  border-radius: 5em;
+  width: 100%;
   border: none;
   outline: none;
   padding: 15px;
   font-size: 18px;
 }
 
-.search__button, .register__button, .login__button {
+.search__button {
   background-color: #45b39c;
   color: white;
   border: none;
   padding: 15px;
-  font-size: 18px;
+  font-size: 16px;
+  height: 50px;
+  width: 50px;
 }
 
 .body {
@@ -81,17 +79,18 @@
   padding: 2em;
   text-align: center;
   width: 100%;
-  font-size: 1rem;
+  font-size: 0.575em;
 }
 
 .landing {
+  background-color: none;
   padding: 0;
 }
 .landing__header {
   position: absolute;
-  top: 5em;
+  top: 4em;
   left: 50%;
-  margin-left: -256px;
+  margin-left: -160px;
 }
 .landing__header-menu {
   list-style: none;
@@ -100,60 +99,163 @@
   magin: 2em;
   padding: 0;
 }
+.landing__header-message {
+  color: white;
+  margin: 1.5em auto -1.5em auto;
+}
 .landing__header-item {
-  background-color: white;
-  width: 10em;
-  margin: 3em;
+  background: linear-gradient(-45deg, #FF5128, #9422E8, #1EC0FF);
+  background-size: 400% 400%;
+  animation: Gradient 15s ease infinite;
+  width: 7.5em;
+  margin: 3em 1.5em auto 1.5em;
   border-radius: 5em;
   padding: 10px;
   font-size: 16px;
 }
-.landing__header-register, .landing__header-login {
-  width: 50px;
-  color: black;
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+.landing__header-link {
+  color: white;
   text-decoration: none;
 }
-.landing__header-register:hover, .landing__header-login:hover {
-  background-color: deeppink;
-  color: white;
-}
-.landing__title {
-  text-align: center;
-  padding: 25px;
+.landing__header-item:hover {
+  background: deeppink;
 }
 
+.login {
+  background-color: white;
+  font-family: "Cousine", sans-serif;
+  border-radius: 0.5em;
+  width: 90%;
+}
 .login__form {
-  padding: 5px;
+  padding: 1px;
+}
+.login__title {
+  color: #502666;
 }
 .login__item {
   list-style: none;
-  margin-top: 2em;
+  margin-top: 0.5em;
+}
+.login__input {
+  border: 1px solid lightgray;
+}
+.login__button {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  border: none;
+  padding: 10px;
+  background: linear-gradient(-45deg, #FF5128, #9422E8, #1EC0FF);
+  background-size: 400% 400%;
+  animation: Gradient 15s ease infinite;
+  font-size: 18px;
+  color: white;
+}
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 .login__back:hover {
   color: deeppink;
 }
 
+.register {
+  background-color: white;
+  font-family: "Cousine", sans-serif;
+  border-radius: 0.5em;
+  width: 90%;
+}
 .register__form {
-  padding: 5px;
+  padding: 1px;
+}
+.register__title {
+  color: #502666;
 }
 .register__item {
   list-style: none;
-  margin-top: 2em;
+  margin-top: 0.5em;
+}
+.register__input {
+  border: 1px solid lightgray;
 }
 .register__button {
-  font-size: 22px;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  border: none;
+  padding: 10px;
+  background: linear-gradient(-45deg, #FF5128, #9422E8, #1EC0FF);
+  background-size: 400% 400%;
+  animation: Gradient 15s ease infinite;
+  font-size: 18px;
+  color: white;
+}
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 .register__back:hover {
   color: deeppink;
 }
 
+.register-success {
+  font-family: "Cousine", sans-serif;
+  border-radius: 0.5em;
+  width: 90%;
+}
+.register-success__copy {
+  color: white;
+}
+.register-success__login {
+  background-color: white;
+  padding: 10px;
+  border-radius: 0.2em;
+  z-index: 1em;
+}
 .register-success__login:hover {
-  color: deeppink;
+  color: white;
+  background-color: deeppink;
 }
 
+.register-or-login {
+  width: 90%;
+  font-family: "Cousine", sans-serif;
+  border-radius: 0.5em;
+}
+.register-or-login__list {
+  padding-top: 3em;
+  padding-bottom: 5em;
+}
 .register-or-login__item {
   list-style: none;
   margin-top: 2em;
+}
+.register-or-login__title {
+  color: white;
 }
 .register-or-login__register, .register-or-login__login {
   background-color: black;
@@ -170,21 +272,54 @@
   color: deeppink;
 }
 
-.random__tv-icon {
-  max-width: 20%;
+.random {
+  background-color: rgba(0, 0, 0, 0.5);
+  margin-top: 1em;
+  padding: 1em;
 }
-.random__tv-remote {
-  max-width: 20%;
+.random__title1 {
+  color: white;
+  text-align: center;
 }
-.random__title {
+.random__title2 {
+  color: white;
+  text-align: left;
+  padding-bottom: 1em;
+  font-family: Bungee;
+  font-size: 10px;
+}
+.random__tv-icon, .random__tv-remote {
+  max-width: 15%;
+  margin: 0.5em auto 1em auto;
+  padding: 0.5em;
+  border: 2px solid white;
+}
+.random__detail {
+  background-color: rgba(0, 0, 0, 0.5);
+  margin-top: 1em;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+}
+.random__detail-title {
+  color: white;
+}
+.random__group {
+  background-color: black;
+  color: white;
+  margin: 1em auto auto auto;
+  padding: 2em;
+}
+.random__gif-title {
   font-size: 33px;
+  margin-bottom: 0.75em;
 }
 .random__photo {
-  max-width: 80%;
-  margin: auto;
+  width: 100%;
 }
 .random__back {
-  margin: 1em auto 2em auto;
+  color: white;
+  font-size: 13px;
 }
 .random__back:hover {
   color: deeppink;
@@ -205,52 +340,103 @@
   color: green;
 }
 
+.categories__list {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.categories__item {
+  margin: 0.4em 0.25em;
+}
+.categories__tag {
+  color: white;
+  text-decoration: none;
+  border: 1px solid white;
+  border-radius: 5em;
+  padding: 7px;
+  font-size: 13px;
+}
+.categories__tag:hover {
+  background-color: white;
+  color: deeppink;
+  text-decoration: none;
+}
+
 .search {
-  margin: 2em auto 2em auto;
+  margin: 1em auto auto auto;
+  padding: 1.5em;
+}
+.search__bar {
+  background-color: rgba(0, 0, 0, 0.5);
+  margin: 0;
+  padding: 1.5em;
+}
+.search__title {
+  color: white;
+  text-align: left;
+  padding-bottom: 1em;
+}
+.search__form {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1em;
 }
 .search__label {
   display: none;
 }
 .search__input {
   text-align: center;
+  font-size: 13px;
 }
 .search__button {
-  background-color: grey;
-  margin: 1em auto 1em auto;
+  margin-left: 1em;
+  background: linear-gradient(-45deg, #FF5128, #9422E8, #1EC0FF);
+  background-size: 400% 400%;
+  animation: Gradient 15s ease infinite;
+}
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .results {
-  margin: 2em auto auto auto;
+  color: white;
+  margin: 1em auto auto auto;
 }
 .results__list {
+  background-color: rgba(0, 0, 0, 0.5);
   display: grid;
-  grid-template-columns: 1;
-  align-items: center;
-  justify-items: center;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 10px;
+  grid-row-gap: 50px;
   list-style: none;
-  padding: 0;
+  padding: 2em;
   font-size: 16px;
 }
 .results__item {
-  margin: 2em;
-  padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .results__image {
-  max-width: 300px;
-  border-radius: 2em;
+  width: 100%;
 }
 .results__favorites {
-  background-color: grey;
+  background-color: rgba(0, 0, 0, 0.5);
   color: white;
   border: none;
-  border-radius: 10px;
+  border-radius: 5em;
   padding: 10px;
   font-size: 16px;
   margin-top: 1em;
-  max-width: 70%;
 }
 .results__favorites:hover {
   background-color: deeppink;
@@ -261,26 +447,50 @@
 }
 
 .detail {
-  margin: 2em auto auto auto;
-  padding: 5em;
+  background-color: black;
+  color: white;
+  margin: 1em auto auto auto;
+  padding: 2em;
 }
 .detail__title {
   font-size: 33px;
+  margin-bottom: 0.75em;
 }
 .detail__photo {
-  max-width: 80%;
-  margin: auto;
+  width: 100%;
+}
+.detail__group1 {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1em;
+}
+.detail__date {
+  font-size: 13px;
+  padding: 5px;
+  color: grey;
 }
 .detail__link {
-  color: black;
+  color: white;
   font-weight: bold;
+  font-size: 13px;
+  padding: 5px;
   text-decoration: none;
 }
 .detail__link:hover {
-  color: gray;
+  color: deeppink;
+}
+.detail__link:hover {
+  color: deeppink;
+}
+.detail__group2 {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1em;
 }
 .detail__back {
+  color: grey;
   margin: 1em auto 2em auto;
+  font-size: 13px;
 }
 .detail__back:hover {
   color: deeppink;
