--- a/staff/groups/alf-&-co/app/components/movie-item/index.sass
+++ b/staff/groups/alf-&-co/app/components/movie-item/index.sass
@@ -7,3 +7,19 @@
     display: flex
     flex-wrap: wrap
     justify-content: space-around
+
+      
+.fas
+    color: $color-green-clair
+    border: none
+    cursor: pointer
+    appearance: none
+    &:not([disabled]):hover,
+    &:not([disabled]):focus 
+        outline: none
+        box-shadow: none
+    &:focus 
+        outline: none
+        box-shadow: none
+    &[disabled] 
+        cursor: not-allowed 
