--- a/staff/groups/le-sky-martini-inc/memefy/components/feedback/index.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/feedback/index.sass
@@ -1,11 +1,14 @@
 .feedback
-    @extend %main-content-box 
-    margin-bottom: 2em
+    margin: 2em auto 2em auto
+    width: 75%
     font-size: 16px
 
     &--error
-        background-color: $error-bg-color
-        color: $secondary-text-color
+        color: red
+        border: 1px solid red
+        border-radius: 10em
+        padding: 15px
+
     &--warn
         background-color: yellow
     &--success
