--- a/staff/groups/le-sky-martini-inc/memefy/components/results.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/results.sass
@@ -2,20 +2,21 @@
     color: white
     margin: 1em auto auto auto
 
-    &__list    
-        background-color: $primary-bg-color    
+    &__list      
         display: grid
         grid-template-columns: 1fr 1fr
         grid-column-gap: 10px
-        grid-row-gap: 50px
+        grid-row-gap: 25px
         list-style: none
-        padding: 2em
         font-size: 16px
 
     &__item
+        background-color: black 
+        padding: 1em 1em 2em 1em
         display: flex
         flex-direction: column
         align-items: center
+        justify-content: flex-end
     
     &__image
         width: 100%
