--- a/staff/groups/le-sky-martini-inc/memefy/style/index.css
+++ b/staff/groups/le-sky-martini-inc/memefy/style/index.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-.feedback, .register-or-login, .register-success, .register, .login, .landing {
+.register-or-login, .register-success, .register, .login, .landing {
   margin: 2em auto auto auto;
   padding: 30px;
   height: 95%;
@@ -242,31 +242,45 @@
 }
 
 .register-or-login {
-  width: 90%;
+  background-color: white;
   font-family: "Cousine", sans-serif;
   border-radius: 0.5em;
+  width: 90%;
 }
 .register-or-login__list {
-  padding-top: 3em;
-  padding-bottom: 5em;
-}
-.register-or-login__item {
+  margin: 2em auto 2em auto;
   list-style: none;
-  margin-top: 2em;
 }
 .register-or-login__title {
-  color: white;
+  color: #502666;
 }
-.register-or-login__register, .register-or-login__login {
-  background-color: black;
+.register-or-login__item {
+  background: linear-gradient(-45deg, #FF5128, #9422E8, #1EC0FF);
+  background-size: 400% 400%;
+  animation: Gradient 15s ease infinite;
+  max-width: 50%;
+  margin: 1em auto auto auto;
+  border-radius: 5em;
+  padding: 1em;
+  font-size: 22px;
+}
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+.register-or-login__link {
   color: white;
   text-decoration: none;
-  padding: 10px;
-  font-size: 16px;
 }
-.register-or-login__register:hover, .register-or-login__login:hover {
-  background-color: white;
-  color: deeppink;
+.register-or-login__item:hover {
+  background: deeppink;
 }
 .register-or-login__back:hover {
   color: deeppink;
@@ -289,10 +303,14 @@
   font-size: 10px;
 }
 .random__tv-icon, .random__tv-remote {
-  max-width: 15%;
+  min-width: 10%;
+  max-width: 50%;
   margin: 0.5em auto 1em auto;
   padding: 0.5em;
   border: 2px solid white;
+}
+.random__tv-icon:hover, .random__tv-remote:hover {
+  background-color: white;
 }
 .random__detail {
   background-color: rgba(0, 0, 0, 0.5);
@@ -326,12 +344,15 @@
 }
 
 .feedback {
-  margin-bottom: 2em;
+  margin: 2em auto 2em auto;
+  width: 75%;
   font-size: 16px;
 }
 .feedback--error {
-  background-color: rgba(100, 0, 0, 0.65);
-  color: white;
+  color: red;
+  border: 1px solid red;
+  border-radius: 10em;
+  padding: 15px;
 }
 .feedback--warn {
   background-color: yellow;
@@ -412,19 +433,20 @@
   margin: 1em auto auto auto;
 }
 .results__list {
-  background-color: rgba(0, 0, 0, 0.5);
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 10px;
-  grid-row-gap: 50px;
+  grid-row-gap: 25px;
   list-style: none;
-  padding: 2em;
   font-size: 16px;
 }
 .results__item {
+  background-color: black;
+  padding: 1em 1em 2em 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-end;
 }
 .results__image {
   width: 100%;
