add style to this fucking awsome app

--- a/staff/groups/esputy-corp/esputyfu/components/track-detail/index.sass
+++ b/staff/groups/esputy-corp/esputyfu/components/track-detail/index.sass
@@ -1,5 +1,34 @@
 .container__img
     width:100%
     max-width:600px
+    margin-left: auto
+    margin-right: auto
+    
+
 .container__ul--detail
-    list-style: none
+    list-style: none 
+    color: white
+    text-align: center
+    
+.container__a
+    color: white
+    text-decoration: none
+    margin-left: 10px
+.fa
+    font-size: 28px
+    display: block
+    margin-left: auto
+    margin-right: auto
+
+.fa-heart-o
+    color: green
+.fa-heart
+    color: plum
+.button__fav
+    background-color: black
+    border: none
+    display: block
+    margin-left: auto
+    margin-right: auto
+    margin-top: 20px
+    margin-bottom: 20px
