--- a/staff/groups/esputy-corp/esputyfu/styles/base-settings.sass
+++ b/staff/groups/esputy-corp/esputyfu/styles/base-settings.sass
@@ -20,6 +20,12 @@ body
         margin-top: 1rem
         width: 75%
         padding: 8px
+        max-width: 300px
+        display: block
+        margin-left: auto
+        margin-right: auto
+        
+
     &__advice
      display: none
     &__button
@@ -28,6 +34,8 @@ body
         border-radius: 10px
         width: 50%
         margin-top: 50px
+        max-width: 150px
+        height: 30px
 
 
     
