--- a/staff/groups/esputy-corp/esputyfu/components/results/index.sass
+++ b/staff/groups/esputy-corp/esputyfu/components/results/index.sass
@@ -2,4 +2,10 @@
     display: flex
     flex-direction: column
     align-items: center
-    
+    color: white
+    margin-bottom: 20px
+  
+.results__ul--res
+   margin-left: auto    
+   margin-right: auto
+   padding: 0
