--- a/staff/groups/esputy-corp/esputyfu/components/track-item/index.sass
+++ b/staff/groups/esputy-corp/esputyfu/components/track-item/index.sass
@@ -1,4 +1,7 @@
 .container__item
     width: 100%
-    max-width: 300px
-    text-align: center
+    max-width: 400px
+    height: 100%
+    max-height: 400px
+    margin-top: 50px
+   
