changes in favorites and input void

--- a/staff/groups/alf-&-co/app/style/index.sass
+++ b/staff/groups/alf-&-co/app/style/index.sass
@@ -8,6 +8,7 @@
 @import ../components/login
 @import ../components/register
 @import ../components/list-modal
+@import ../components/favorites
 
 
 
