fix the fucking fucked class

--- a/staff/groups/esputy-corp/esputyfu/styles/index.css
+++ b/staff/groups/esputy-corp/esputyfu/styles/index.css
@@ -85,7 +85,7 @@ h1 {
 
 .footer {
   width: 100vw;
-  background-color: #0d0d0d;
+  background-color: black;
   bottom: 0px;
   color: white;
   text-align: center;
