--- a/staff/groups/over-cook-sa/overcooked/style/index.sass
+++ b/staff/groups/over-cook-sa/overcooked/style/index.sass
@@ -15,6 +15,28 @@ body
   width: 100vw
   display: flex 
 
+input
+  border: 0.09rem solid rgba(0,0,0,0.3)
+ 
+select, button, a
+    margin: 0.5rem
+    text-align: center
+    padding-top: 0.4rem
+    align-content: space-around
+    text-decoration: none
+    font-size: 0.7rem
+    margin-top: 1rem
+    align-self: center
+    border: none
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+    font-weight: bold
+    background-color: #4091cc
+    color: white !important
+
+a
+    text-decoration: none
+
+
 ul 
   padding: 0
   margin: 0
@@ -105,8 +127,15 @@ main
     height: 70%
     margin: 20px auto
 
+.sticky
+    position: fixed
+    top: 0
+    width: 100%
+    padding-top: 2rem
+    background-color: white
+    border-bottom: 1px solid rgba(0,0,0,0.3)
 
-footer
+.footer
     background-color: rgb(163, 15, 50)
     display: flex
     align-content: flex-end
@@ -116,6 +145,21 @@ footer
     color: white
     width: 100vw
     font-size: 0.8rem
+    position: absolute
+    bottom: 0
+
+.footer-home
+    background-color: rgb(163, 15, 50)
+    display: flex
+    align-content: flex-end
+    flex-wrap: wrap
+    justify-content: space-evenly
+    align-items: baseline
+    color: white
+    width: 100vw
+    font-size: 0.8rem
+    bottom: 0
+    margin-top: 2rem
 
 .footer-sMedia
     display: inline-flex
@@ -184,6 +228,7 @@ footer
 
 .homeHeader
     text-align: center
+    padding: 0
 
 .headerButton
     text-align: center
@@ -208,10 +253,23 @@ footer
     margin-top: 1.5rem
     margin-bottom: 0.5rem
 
+.cat_cont
+    margin-bottom: 2rem
+    margin-top: 12rem
+    
+.catPasta
+  border-top: 0 !important
+
+
 .catTitle
     text-align: center
     color: #4091cc
     margin: 1rem
+    border-top: 1px solid rgba(0,0,0,0.3)
+    padding-top: 1rem
+
+.cat-img
+    width: 100vw
 
 
 .wrapper
@@ -221,14 +279,27 @@ footer
     flex-direction: column
     text-align: center
     margin-top: 1rem
+    border-top: 1px solid rgba(0,0,0,0.3)
+
+    &__title
+      padding-top: 1rem
+
+.wrapper-cont
+    margin-top: 12rem
     
-.img
+.wrapper__img
+    margin-top: 1rem
     width: 100vw
-    height: auto
+
+.fav-text
+    font-size: 12px
 
 .descText
     color: black
     text-align: justify
     padding: 1rem
+
+.home-logo
+    width: 100vw
     
      
