add component-documentation and update folder organization

--- a/staff/groups/le-sky-martini-inc/memefy/components/gif-detail/index.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/gif-detail/index.sass
@@ -1,11 +1,11 @@
 .detail
     background-color: black
     color: white
-    margin: 1em auto auto auto
-    padding: 2em
+    margin: 1em auto 3em auto
+    padding: 2em 1em
 
     &__title
-        font-size: 33px
+        font-size: 22px
         margin-bottom: .75em
 
     &__photo
