--- a/staff/groups/le-sky-martini-inc/memefy/components/register-success/index.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/register-success/index.sass
@@ -10,9 +10,9 @@
     &__login
         @extend %link
         background-color: white
-        padding: 10px
+        padding: 3px 10px
         border-radius: 0.2em 
-        z-index: 1em
+        line-height: 3
     
     &__login:hover
         color: white
