--- a/staff/groups/le-sky-martini-inc/memefy/components/search/index.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/search/index.sass
@@ -38,4 +38,11 @@
             100% 
                 background-position: 0% 50%
 
+    &__favorite-title
+        background-color: $primary-bg-color
+        margin: 0
+        padding: 1.5em
+        color: white
+        text-align: center
+
         
