--- a/staff/groups/le-sky-martini-inc/memefy/components/results/index.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/results/index.sass
@@ -1,6 +1,6 @@
 .results
     color: white
-    margin: 1em auto auto auto
+    margin: 2em auto 3em auto
 
     &__list      
         display: grid
@@ -15,7 +15,7 @@
         padding: 1em 1em 2em 1em
         display: flex
         flex-direction: column
-        align-items: center
+        align-items: stretch
         justify-content: flex-end
     
     &__image
