--- a/staff/groups/alf-&-co/app/style/index.sass
+++ b/staff/groups/alf-&-co/app/style/index.sass
@@ -8,6 +8,7 @@
 @import ../components/login
 @import ../components/register
 @import ../components/list-modal
+@import ../components/collections
 
 
 
@@ -21,7 +22,7 @@
 
     line-height: 50px
 
-    font-weight: 500
+    font-weight: 600
 
     font-size: 1rem
 
