--- a/staff/groups/alf-&-co/app/components/collections/index.sass
+++ b/staff/groups/alf-&-co/app/components/collections/index.sass
@@ -3,12 +3,13 @@ ul
 
 li 
     list-style: none
-
+.container
+    margin-top: 60px
 .container_image
     width:95%
     display: flex
     align-items: center
-    margin: 10px auto
+    margin: 5px auto
     position: relative
     text-align: center
     img
