--- a/staff/groups/chuck-and-sons/chuck-project/style/index.sass
+++ b/staff/groups/chuck-and-sons/chuck-project/style/index.sass
@@ -2,6 +2,12 @@
 @import ../components/header
 @import ../components/landing
 @import ../components/register
+@import ../components/feedback
 @import ../components/register-success
+@import ../components/retrieve-jokes
+@import ../components/categories
 @import ../components/login
+@import utils/button.sass
+@import utils/form.sass
+@import utils/search-random-box.sass
 @import base-settings.sass
