--- a/staff/groups/chuck-and-sons/chuck-project/components/app/index.sass
+++ b/staff/groups/chuck-and-sons/chuck-project/components/app/index.sass
@@ -1,7 +1,13 @@
 .wrapper
-    width: 75%
-    margin: 0 auto
+    width: 100%
     display: flex
     flex-direction: column
-    align-items: center
-    border: 1px solid
+    justify-content: center
+    background-color: #fcd251
+
+.welcome-mssg
+    padding: 5px
+    margin: 25px
+    text-align: center
+    background-color: #fcde85
+    border-radius: 5px
