--- a/staff/groups/chuck-and-sons/chuck-project/components/categories/index.sass
+++ b/staff/groups/chuck-and-sons/chuck-project/components/categories/index.sass
@@ -1,24 +1,30 @@
 li
+    width: 100%
+    text-align: center
     list-style: none
     font-size: 1.3rem
-    margin: 3px
-    background-color: #4f4c4c
+    margin: 2px
+    background-color: #E7E8E5
     border-radius: 5px
     cursor: pointer
 
-    
-
-li:hover
-    background-color: #f74f31
-    
+li:active
+    color: white
+    background-color: #47cf73    
+   
 .category
-    margin: 0
     color: black
-    text-align: center
 
-.category:hover
-    color: whitesmoke
+.category:active
+    color: white
 
-.categories
-    width: 200px
-    
+.categories__list
+    width: 100%
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    padding-left: 0
+
+
+   
